CSS: Avoid chromatic (red/green) contrast on login screen links (#4430)

--- a/public/css/icinga/login.less
+++ b/public/css/icinga/login.less
@@ -165,12 +165,10 @@
   }
 
   a {
-    font-weight: @font-weight-bold;
-    .var(color, icinga-secondary);
+    text-decoration: underline;
 
     &:hover {
-      text-decoration: none;
-      .var(color, icinga-secondary-dark);
+      opacity: .8;
     }
   }
 }
